--- a/XMLGenerator/MainWindow.xaml
+++ b/XMLGenerator/MainWindow.xaml
@@ -5,15 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XMLGenerator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="141" Width="323">
     <Grid>
-        <ComboBox x:Name="cb_VMs" Margin="10,45,670,367"/>
-        <Label x:Name="lbl_Name" Content="Name" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbl_RAM" Content="RAM" HorizontalAlignment="Left" Margin="50,100,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbl_CPU" Content="CPU cores" HorizontalAlignment="Left" Margin="90,100,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbl_MAC" Content="mac" HorizontalAlignment="Left" Margin="130,100,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbl_PCI" Content="PCI" HorizontalAlignment="Left" Margin="170,100,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbl_VNC" Content="VNC port" HorizontalAlignment="Left" Margin="210,100,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cb_VMs" Margin="10,9,0,0" HorizontalAlignment="Left" Width="101" Height="20" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_Name" Content="Name" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_RAM" Content="RAM" HorizontalAlignment="Left" Margin="75,37,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_CPU" Content="CPU cores" HorizontalAlignment="Left" Margin="116,37,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_MAC" Content="mac" HorizontalAlignment="Left" Margin="185,37,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_VNC" Content="VNC port:" HorizontalAlignment="Left" Margin="206,86,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_Name" HorizontalAlignment="Left" Margin="10,63,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="60"/>
+        <TextBox x:Name="tb_RAM" HorizontalAlignment="Left" Margin="77,63,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="34"/>
+        <TextBox x:Name="tb_CPU" HorizontalAlignment="Left" Margin="120,63,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="60"/>
+        <TextBox x:Name="tb_MAC" HorizontalAlignment="Left" Margin="185,63,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tb_BUS" HorizontalAlignment="Left" Margin="40,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="30"/>
+        <TextBox x:Name="tb_Slot" HorizontalAlignment="Left" Margin="104,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="26"/>
+        <TextBox x:Name="tb_Function" HorizontalAlignment="Left" Margin="174,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="27"/>
+        <TextBox x:Name="tb_VNC" HorizontalAlignment="Left" Margin="270,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="35"/>
+        <Label x:Name="lbl_PCI" Content="PCI:" HorizontalAlignment="Left" Margin="10,87,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_BUS" Content="BUS:" HorizontalAlignment="Left" Margin="70,87,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_SLOT" Content="SLOT:" HorizontalAlignment="Left" Margin="135,87,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_SaveAsNew" Content="Save as new VM" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_GenerateXML" Content="Generate XML" HorizontalAlignment="Left" Margin="226,10,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
