all functionalities added

--- a/XMLGenerator/MainWindow.xaml
+++ b/XMLGenerator/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XMLGenerator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="141" Width="323">
+        Title="MainWindow" Height="167" Width="340">
     <Grid>
-        <ComboBox x:Name="cb_VMs" Margin="10,9,0,0" HorizontalAlignment="Left" Width="101" Height="20" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cb_VMs" Margin="10,9,0,0" HorizontalAlignment="Left" Width="101" Height="20" VerticalAlignment="Top" SelectionChanged="cb_VMs_SelectionChanged"/>
         <Label x:Name="lbl_Name" Content="Name" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_RAM" Content="RAM" HorizontalAlignment="Left" Margin="75,37,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_CPU" Content="CPU cores" HorizontalAlignment="Left" Margin="116,37,0,0" VerticalAlignment="Top"/>
@@ -24,8 +24,8 @@
         <Label x:Name="lbl_PCI" Content="PCI:" HorizontalAlignment="Left" Margin="10,87,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_BUS" Content="BUS:" HorizontalAlignment="Left" Margin="70,87,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_SLOT" Content="SLOT:" HorizontalAlignment="Left" Margin="135,87,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btn_SaveAsNew" Content="Save as new VM" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btn_GenerateXML" Content="Generate XML" HorizontalAlignment="Left" Margin="226,10,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_SaveAsNew" Content="Save as new VM" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Click="btn_SaveAsNew_Click"/>
+        <Button x:Name="btn_GenerateXML" Content="Generate XML" HorizontalAlignment="Left" Margin="226,10,0,0" VerticalAlignment="Top" Click="btn_GenerateXML_Click"/>
 
     </Grid>
 </Window>
